--- a/hosted/style.css
+++ b/hosted/style.css
@@ -50,7 +50,7 @@ nav:nth-child(1) {
 .domoForm {
     border: 2px solid #338acc;
     height: 35px;
-    width: 700px;
+    width: 850px;
     margin-top:0px;
     padding-top:10px;
     background-color: #55acee;
@@ -79,6 +79,7 @@ nav:nth-child(1) {
     border-radius: 2px;
     color: white;
     text-decoration: none;
+    margin-left: 10px;
 }
 
 .makeDomoSubmit:link, .makeDomoSubmit:visited, .makeDomoSubmit:hover, .makeDomoSubmit:active {
@@ -237,20 +238,27 @@ h3.emptyDomo {
 }
 
 h3.domoName {
-    float:left;
-    width: 200px;
     font-weight: bold;
-    padding-left: 65px;
     font-size: 1.5em;
 }
 
+.domoDetails {
+    display: flex;
+    justify-content: space-between;
+}
+
 h3.domoAge {
-    float:right;
     text-align: left;
-    width: 100px;
     font-weight: bold;
-    padding-right: 40px;
     font-size: 1.5em;
+    margin-left: 25px;
+}
+
+h3.domoTalent {
+    text-align: left;
+    font-weight: bold;
+    font-size: 1.5em;
+    margin-right: 25px;
 }
 
 .domo:first-child {
